--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,11 @@ android {
     }
 }
 
+apply plugin: 'kotlin-kapt'
+
 dependencies {
+
+    def room_version = "2.2.6"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -56,4 +60,12 @@ dependencies {
     implementation "org.koin:koin-android:2.2.0"
     implementation "org.koin:koin-androidx-scope:2.2.0"
     implementation "org.koin:koin-androidx-viewmodel:2.2.0"
+
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    // Coroutines
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
 }
