--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,25 +41,28 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //Cicerone
+    implementation("com.github.terrakok:cicerone:6.6")
+
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-jackson:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
 
     // Glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     // Koin
-    implementation "org.koin:koin-android:2.2.0"
-    implementation "org.koin:koin-androidx-scope:2.2.0"
-    implementation "org.koin:koin-androidx-viewmodel:2.2.0"
+    implementation "org.koin:koin-android:2.2.1"
+    implementation "org.koin:koin-androidx-scope:2.2.1"
+    implementation "org.koin:koin-androidx-viewmodel:2.2.1"
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
