--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 apply plugin: 'kotlin-kapt'
@@ -77,8 +81,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
 
     // Glide
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
 
     // Koin
     implementation "org.koin:koin-android:2.2.1"
@@ -87,10 +91,10 @@ dependencies {
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
     // Coroutines
-    implementation "androidx.room:room-ktx:$room_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
 
     // ImageViewer
@@ -101,5 +105,8 @@ dependencies {
 
     // chucker
     debugImplementation "com.github.chuckerteam.chucker:library:3.5.2"
+
+    // viewBinding
+    implementation "com.github.yogacp:android-viewbinding:1.0.3"
 
 }
