--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,15 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion DefaultConfigs.compileSdk
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.aslnstbk.unsplash"
-        minSdkVersion 21
-        targetSdkVersion 33
-        versionCode 2
-        versionName "1.1"
+        applicationId DefaultConfigs.applicationId
+        minSdkVersion DefaultConfigs.minSdk
+        targetSdkVersion DefaultConfigs.targetSdk
+        versionCode DefaultConfigs.versionCode
+        versionName DefaultConfigs.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -21,20 +21,20 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField ("String", "BASE_URL", '"https://api.unsplash.com/"')
-            buildConfigField ("String", "ACCESS_KEY", '"8pP0jm61SywqkfBSd9NG-SosWQbmiocTp4COZad-2TY"')
+            buildConfigField ("String", ConfigFields.BASE_URL, '"https://api.unsplash.com/"')
+            buildConfigField ("String", ConfigFields.ACCESS_KEY, '"8pP0jm61SywqkfBSd9NG-SosWQbmiocTp4COZad-2TY"')
         }
-        debug{
+        debug {
             debuggable true
-            buildConfigField ("String", "BASE_URL", '"https://api.unsplash.com/"')
-            buildConfigField ("String", "ACCESS_KEY", '"8pP0jm61SywqkfBSd9NG-SosWQbmiocTp4COZad-2TY"')
+            buildConfigField ("String", ConfigFields.BASE_URL, '"https://api.unsplash.com/"')
+            buildConfigField ("String", ConfigFields.ACCESS_KEY, '"8pP0jm61SywqkfBSd9NG-SosWQbmiocTp4COZad-2TY"')
         }
         staging {
             debuggable true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             testCoverageEnabled = true
-            buildConfigField ("String", "BASE_URL", '""')
-            buildConfigField ("String", "ACCESS_KEY", '""')
+            buildConfigField ("String", ConfigFields.BASE_URL, '""')
+            buildConfigField ("String", ConfigFields.ACCESS_KEY, '""')
         }
     }
 
@@ -61,57 +61,55 @@ apply plugin: 'kotlin-kapt'
 
 dependencies {
 
-    def room_version = "2.5.1"
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.6.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation Dependencies.kotlinStbLib
+    implementation Dependencies.coreKtx
+    implementation Dependencies.appCompat
+    implementation Dependencies.material
+    implementation Dependencies.constrainLayout
+    implementation Dependencies.legacySupport
+    testImplementation Dependencies.junit
+    androidTestImplementation Dependencies.junitExt
+    androidTestImplementation Dependencies.espressoCore
 
     //Cicerone
-    implementation("com.github.terrakok:cicerone:6.6")
+    implementation Dependencies.cicerone
 
     // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
+    implementation Dependencies.retrofit
+    implementation Dependencies.converterJackson
 
     // Glide
-    implementation 'com.github.bumptech.glide:glide:4.15.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
+    implementation Dependencies.glide
+    annotationProcessor Dependencies.glideCompiler
 
     // Koin
-    implementation "org.koin:koin-android:2.2.1"
-    implementation "org.koin:koin-androidx-scope:2.2.1"
-    implementation "org.koin:koin-androidx-viewmodel:2.2.1"
+    implementation Dependencies.koin
+    implementation Dependencies.koinScope
+    implementation Dependencies.koinViewModel
 
     // Room
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation Dependencies.roomRuntime
+    implementation Dependencies.roomKtx
+    kapt Dependencies.roomCompiler
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation Dependencies.coroutines
 
     // ImageViewer
-    implementation 'com.github.stfalcon:stfalcon-imageviewer:1.0.1'
+    implementation Dependencies.imageViewer
 
     // for Staggered layout flow tags
-    implementation 'org.apmem.tools:layouts:1.10@aar'
+    implementation Dependencies.staggeredLayout
 
     // chucker
-    debugImplementation "com.github.chuckerteam.chucker:library:3.5.2"
+    debugImplementation Dependencies.chucker
 
     // viewBinding
-    implementation "com.github.yogacp:android-viewbinding:1.0.3"
+    implementation Dependencies.viewBinding
 
     //Navigation dependencies
-    implementation "androidx.navigation:navigation-runtime-ktx:2.5.3"
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
+    implementation Dependencies.navigationRuntime
+    implementation Dependencies.navigationFragmentKtx
+    implementation Dependencies.navigationUiKtx
 
 }
